--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -1,8 +1,8 @@
-name: Build master
+name: Build main
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 env:
   REGISTRY: ghcr.io
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }}
           build-args: |
