--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,4 +1,5 @@
 core:
+  env: dev
   auth:
     external: https://auth-dev.closeencounterscorps.org
     internal: http://cecc-auth
@@ -7,3 +8,5 @@ core:
 image: 
   name: ghcr.io/close-encounters-corps/cec-core:master
   secret: ghcr
+jaeger:
+  url: "http://tempo.monitoring:14268/api/traces"
