--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -15,11 +15,14 @@ jobs:
       - name: downcase REPO
         run: |
           echo "IMAGE_NAME=${REPO,,}" >>${GITHUB_ENV}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Setup docker
         uses: docker/setup-buildx-action@v1
       - name: Login to docker hub
         uses: docker/login-action@v1 
         with:
+          platforms: linux/amd64,linux/arm64
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
